--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
+    "nodemailer-express-handlebars": "^3.0.0",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "prettier": "^1.18.2",
